change like property to favorited, make sure profile and logout visible on view post hbs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,7 @@ nav {
   cursor: pointer;
   background-color: rgb(249, 249, 249);
 }
+
+a {
+  text-decoration: none;
+}
